# mcp-crawl4ai-rag

./: .coverage  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  crawled_pages.sql  debug_crawling_summary.py  main.py  pyproject.toml  run_postgres_db_setup.sh  setup_postgres.sql  setup_test_postgres.sql  test_batch_optimization.py  test_batch_processing.py  test_embedding_config.py
.claude/commands/: context-prime.md  create-prp-parallel
PRPs/: README.md
PRPs/ai_docs/: anthropic_msg_api.md  refactor_plan.md  uv_practices.md  uv_tools.md
scripts/: browser_maintenance.py  setup_test_db.py
src/: __init__.py  config.py  conftest.py  main.py  mcp_server.py  models.py
src/services/: __init__.py  crawling.py  database.py  embeddings.py  search.py
src/services/tests/: README_postgres_tests.md  conftest.py  test_crawling.py  test_database.py  test_database_postgres.py  test_embeddings.py  test_search.py  test_search_integration.py  test_search_postgres.py
src/tools/: browser_health.py  cancel_crawl.py  cleanup_chrome.py  crawl_single_page.py  get_available_sources.py  perform_rag_query.py  search_code_examples.py  smart_crawl_url.py
src/tools/tests/: test_cancel_crawl.py  test_crawl_single_page.py  test_get_available_sources.py  test_perform_rag_query.py  test_search_code_examples.py  test_smart_crawl_url.py
src/utilities/: browser_cleanup.py  browser_monitor.py  metadata.py  mmr.py  query_enhancement.py  reranking.py  text_processing.py
src/utilities/tests/: test_browser_cleanup.py  test_metadata.py  test_reranking.py  (+1 more)
